Voltando aos estudos e exercícios

--- a/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Hora da prática.ipynb
+++ b/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Hora da prática.ipynb
@@ -1542,12 +1542,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "Zg1CLRTxjYgM"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "could not convert string to float: 'a'\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    x, y = map(float, input('Insira 2 numero').split())\n",
+    "    resultado = x / y\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "else:\n",
+    "    print(resultado)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1569,8 +1585,26 @@
    "metadata": {
     "id": "mcTh-_tDjYgM"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome não encontrado\n"
+     ]
+    }
+   ],
+   "source": [
+    "idades = {'Júlia': 16, 'Carol': 23, 'Alberto': 19, 'Roberta': 17}\n",
+    "\n",
+    "try:\n",
+    "    nome = input('Insira o nome pesquisado: ')\n",
+    "    idade = idades[nome]   # armazene o valor em uma variável\n",
+    "except KeyError:\n",
+    "    print('Nome não encontrado')\n",
+    "else:\n",
+    "    print(f'Idade: {idade}')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1584,12 +1618,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "1oflR6ywjYgN"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def converte_lista(lista):\n",
+    "    try:\n",
+    "        nova_lista = [float(x) for x in lista]\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "    else:\n",
+    "        return nova_lista\n",
+    "    finally:\n",
+    "        print('fim da execução da função')  \n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "could not convert string to float: 'abc'\n",
+      "fim da execução da função\n",
+      "Resultado: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# teste rápido\n",
+    "valores = ['10', '20', 'abc']\n",
+    "resultado = converte_lista(valores)\n",
+    "print('Resultado:', resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1628,7 +1695,81 @@
     "id": "iMjbUztBjYgN"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def agrupar_listas (lista1, lista2):\n",
+    "    try:\n",
+    "        if len(lista1) != len(lista2):\n",
+    "            raise IndexError('A quantidade de elementos em cada lista é diferente.')\n",
+    "        tuplas = [(x, y, x + y) for x, y in zip(lista1, lista2)]\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        \n",
+    "    else:\n",
+    "        return tuplas\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, -4, 0), (6, 6, 12), (7, 8, 15), (9, 7, 16), (10, 9, 19)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista1 = [4,6,7,9,10]\n",
+    "lista2 = [-4,6,8,7,9]\n",
+    "agrupar_listas(lista1, lista2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A quantidade de elementos em cada lista é diferente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "lista1 = [4,6,7,9,10,4]\n",
+    "lista2 = [-4,6,8,7,9]\n",
+    "agrupar_listas(lista1, lista2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unsupported operand type(s) for +: 'int' and 'str'\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista1 = [4,6,7,9,'A']\n",
+    "lista2 = [-4,'E',8,7,9]\n",
+    "agrupar_listas(lista1, lista2)"
+   ]
   },
   {
    "cell_type": "markdown",
