--- a/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Python_para_Data_Science.ipynb
+++ b/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Python_para_Data_Science.ipynb
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "zCdjBCDFLE_6"
    },
@@ -2961,12 +2961,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "NS4vABJPDcFN"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.0, 9.0, 10.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    nome = input('Digite o nome do estudante: ')\n",
+    "    resultado = notas[nome]\n",
+    "except KeyError:\n",
+    "    print('Estudante não matriculado na turma')\n",
+    "else:\n",
+    "    print(resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3019,12 +3035,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "U8QCogXhBi8C"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estudante não matriculado na turma\n",
+      "A consulta foi encerrada!\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    nome = input('Digite o nome do estudante: ')\n",
+    "    resultado = notas[nome]\n",
+    "except KeyError:\n",
+    "    print('Estudante não matriculado na turma')\n",
+    "else:\n",
+    "    print(resultado)\n",
+    "finally:\n",
+    "    print('A consulta foi encerrada!')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3071,7 +3106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "Hf7MQtMjSXS-"
    },
@@ -3088,7 +3123,8 @@
     "  \n",
     "  calculo = sum(lista) / len(lista)\n",
     "\n",
-    "  ...\n",
+    "  if(len(lista) > 4):\n",
+    "    raise ValueError(\"A lista não pode possuir mais de 4 notas.\")\n",
     "\n",
     "  return calculo"
    ]
@@ -3099,8 +3135,25 @@
    "metadata": {
     "id": "gnlcrP93k8f2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m notas = [\u001b[32m6\u001b[39m, \u001b[32m7\u001b[39m, \u001b[32m8\u001b[39m, \u001b[32m8\u001b[39m, \u001b[32m9\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m8\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m resultado = \u001b[43mmedia\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnotas\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m resultado\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 10\u001b[39m, in \u001b[36mmedia\u001b[39m\u001b[34m(lista)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mmedia\u001b[39m(lista: \u001b[38;5;28mlist\u001b[39m=[\u001b[32m0\u001b[39m]) -> \u001b[38;5;28mfloat\u001b[39m:\n\u001b[32m      2\u001b[39m \u001b[38;5;250m  \u001b[39m\u001b[33;03m''' Função para calcular a média de notas passadas por uma lista\u001b[39;00m\n\u001b[32m      3\u001b[39m \n\u001b[32m      4\u001b[39m \u001b[33;03m  lista: list, default [0]\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m      7\u001b[39m \u001b[33;03m    Média calculada\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[33;03m  '''\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m   calculo = \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mlista\u001b[49m\u001b[43m)\u001b[49m / \u001b[38;5;28mlen\u001b[39m(lista)\n\u001b[32m     12\u001b[39m   \u001b[38;5;28;01mif\u001b[39;00m(\u001b[38;5;28mlen\u001b[39m(lista) > \u001b[32m4\u001b[39m):\n\u001b[32m     13\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mA lista não pode possuir mais de 4 notas.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "notas = [6, 7, 8, 8, 9]\n",
+    "resultado = media(notas)\n",
+    "resultado"
+   ]
   },
   {
    "cell_type": "code",
@@ -3109,34 +3162,95 @@
     "id": "IprXe3qalX5J"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "notas = [6, 7, 8, 8, 9, \"8\"]\n",
+    "resultado = media(notas)\n",
+    "resultado"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "lO8OCMRzSXQv"
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Não foi possível calcular a média do(a) estudante. Só são aceitos valores numéricos!\n",
+      "A consulta foi encerrada\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    notas = [6, 7, 8, 8, 9, \"8\"]\n",
+    "    resultado = media(notas)\n",
+    "except TypeError:\n",
+    "    print(\"Não foi possível calcular a média do(a) estudante. Só são aceitos valores numéricos!\")\n",
+    "except ValueError as e:\n",
+    "    print(e)\n",
+    "else:\n",
+    "    print(resultado)\n",
+    "finally:\n",
+    "    print('A consulta foi encerrada')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "A-rA3l4hm4RA"
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A lista não pode possuir mais de 4 notas.\n",
+      "A consulta foi encerrada\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    notas = [6, 7, 8, 8, 9]\n",
+    "    resultado = media(notas)\n",
+    "except TypeError:\n",
+    "    print(\"Não foi possível calcular a média do(a) estudante. Só são aceitos valores numéricos!\")\n",
+    "except ValueError as e:\n",
+    "    print(e)\n",
+    "else:\n",
+    "    print(resultado)\n",
+    "finally:\n",
+    "    print('A consulta foi encerrada')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Jf3Sg5H-m4Za"
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n",
+      "A consulta foi encerrada\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    notas = [7, 8, 8, 9]\n",
+    "    resultado = media(notas)\n",
+    "except TypeError:\n",
+    "    print(\"Não foi possível calcular a média do(a) estudante. Só são aceitos valores numéricos!\")\n",
+    "except ValueError as e:\n",
+    "    print(e)\n",
+    "else:\n",
+    "    print(resultado)\n",
+    "finally:\n",
+    "    print('A consulta foi encerrada')"
+   ]
   }
  ],
  "metadata": {
