Refactor code structure for improved readability and maintainability

--- a/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Hora da prática.ipynb
+++ b/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Hora da prática.ipynb
@@ -1818,6 +1818,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validacao(resposta):\n",
+    "    for elemento in resposta:\n",
+    "        if elemento not in ['A', 'B', 'C', 'D']:\n",
+    "            raise ValueError(f\"A alternativa {elemento} não é uma opção de alternativa válida\")\n",
+    "\n",
+    "\n",
+    "def pontuar(gabarito, resposta):\n",
+    "    nota = 0\n",
+    "    for i in range(len(gabarito)):\n",
+    "        if resposta[i] == gabarito[i]:\n",
+    "            nota += 1\n",
+    "    return nota\n",
+    "\n",
+    "\n",
+    "def calcular_notas(gabarito, testes):\n",
+    "    for respostas in testes:\n",
+    "        validacao(respostas)\n",
+    "    notas = [pontuar(gabarito, respostas) for respostas in testes]\n",
+    "    return notas\n",
+    "\n",
+    "\n",
+    "gabarito = ['D', 'A', 'B', 'C', 'A']\n",
+    "testes_sem_ex = [['D', 'A', 'B', 'C', 'A'], ['C', 'A', 'A', 'C', 'A'], ['D', 'B', 'A', 'C', 'A']]\n",
+    "testes_com_ex = [['D', 'A', 'B', 'C', 'A'], ['C', 'A', 'A', 'E', 'A'], ['D', 'B', 'A', 'C', 'A']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "id": "n7AJhrMpjYgN"
@@ -1829,24 +1861,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "o_05pMigo-tR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 3, 3]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Testando no exemplo que não lança exceção\n"
+    "# Testando no exemplo que não lança exceção\n",
+    "calcular_notas(gabarito, testes_sem_ex)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "PWeHm6Fjo-at"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "A alternativa E não é uma opção de alternativa válida",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Testando no exemplo que lança exceção\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mcalcular_notas\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgabarito\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtestes_com_ex\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 17\u001b[39m, in \u001b[36mcalcular_notas\u001b[39m\u001b[34m(gabarito, testes)\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcalcular_notas\u001b[39m(gabarito, testes):\n\u001b[32m     16\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m respostas \u001b[38;5;129;01min\u001b[39;00m testes:\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m         \u001b[43mvalidacao\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrespostas\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     18\u001b[39m     notas = [pontuar(gabarito, respostas) \u001b[38;5;28;01mfor\u001b[39;00m respostas \u001b[38;5;129;01min\u001b[39;00m testes]\n\u001b[32m     19\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m notas\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 4\u001b[39m, in \u001b[36mvalidacao\u001b[39m\u001b[34m(resposta)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m elemento \u001b[38;5;129;01min\u001b[39;00m resposta:\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m elemento \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m [\u001b[33m'\u001b[39m\u001b[33mA\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mB\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mC\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mD\u001b[39m\u001b[33m'\u001b[39m]:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mA alternativa \u001b[39m\u001b[38;5;132;01m{\u001b[39;00melemento\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m não é uma opção de alternativa válida\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: A alternativa E não é uma opção de alternativa válida"
+     ]
+    }
+   ],
    "source": [
-    "# Testando no exemplo que lança exceção\n"
+    "# Testando no exemplo que lança exceção\n",
+    "calcular_notas(gabarito, testes_com_ex)"
    ]
   },
   {
@@ -1889,29 +1948,64 @@
    },
    "outputs": [],
    "source": [
-    "# criando a função que recebe a lista de palavras\n"
+    "# criando a função que recebe a lista de palavras\n",
+    "def conferencia_simbolos(palavra):\n",
+    "    '''Verifica se a palavra contém pontuação. Lança ValueError se encontrar.'''\n",
+    "    for simbolo in [',', '.', '!', '?']:\n",
+    "        if simbolo in palavra:\n",
+    "            raise ValueError(f'O texto apresenta pontuação na palavra \"{palavra}\".')\n",
+    "\n",
+    "\n",
+    "def conferencia(lista):\n",
+    "    '''Realiza o teste de conferencia de simbolos em toda a lista de palavras.'''\n",
+    "    for palavra in lista:\n",
+    "        conferencia_simbolos(palavra)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "gDvOq79slmlJ"
    },
    "outputs": [],
    "source": [
-    "# Testando no exemplo que não lança exceção\n"
+    "# Testando no exemplo que não lança exceção\n",
+    "lista_tratada = ['Python', 'é', 'uma', 'linguagem', 'de', 'programação', 'poderosa', 'versátil',\n",
+    "                  'e', 'fácil', 'de', 'aprender', 'utilizada', 'em', 'diversos', 'campos', 'desde',\n",
+    "                  'análise', 'de', 'dados', 'até', 'inteligência', 'artificial']\n",
+    "\n",
+    "conferencia(lista_tratada)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "PQADJf42woaw"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "O texto apresenta pontuação na palavra poderosa,",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Testando no exemplo que lança exceção\u001b[39;00m\n\u001b[32m      2\u001b[39m lista_nao_tratada = [\u001b[33m'\u001b[39m\u001b[33mPython\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mé\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33muma\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mlinguagem\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mde\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mprogramação\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mpoderosa,\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mversátil\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      3\u001b[39m                   \u001b[33m'\u001b[39m\u001b[33me\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mfácil,\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mde\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33maprender\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mutilizada\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mem\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mdiversos\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcampos,\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mdesde\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      4\u001b[39m                   \u001b[33m'\u001b[39m\u001b[33manálise\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mde\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mdados\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33maté\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33minteligência\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33martificial!\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[43mconferencia\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlista_nao_tratada\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mconferencia\u001b[39m\u001b[34m(lista)\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mconferencia\u001b[39m(lista):\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m palavra \u001b[38;5;129;01min\u001b[39;00m lista:\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m         \u001b[43mconferencia_simbolos\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpalavra\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 4\u001b[39m, in \u001b[36mconferencia_simbolos\u001b[39m\u001b[34m(palavra)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mconferencia_simbolos\u001b[39m(palavra):\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m (\u001b[33m'\u001b[39m\u001b[33m,\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;129;01mor\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33m.\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;129;01mor\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33m!\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33m?\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;129;01min\u001b[39;00m palavra:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mO texto apresenta pontuação na palavra \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpalavra\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: O texto apresenta pontuação na palavra poderosa,"
+     ]
+    }
+   ],
    "source": [
-    "# Testando no exemplo que lança exceção\n"
+    "# Testando no exemplo que lança exceção\n",
+    "lista_nao_tratada = ['Python', 'é', 'uma', 'linguagem', 'de', 'programação', 'poderosa,', 'versátil',\n",
+    "                  'e', 'fácil,', 'de', 'aprender', 'utilizada', 'em', 'diversos', 'campos,', 'desde',\n",
+    "                  'análise', 'de', 'dados', 'até', 'inteligência', 'artificial!']\n",
+    "\n",
+    "conferencia(lista_nao_tratada)"
    ]
   },
   {
@@ -1953,44 +2047,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "pYofyZVsuF2Y"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def validacao(p, t):\n",
+    "    '''Validar possíveis erros de exceção que podem ocorrer antes da divisão.'''\n",
+    "    if (0 in t):\n",
+    "        raise ZeroDivisionError('Há temperatura com valor 0')\n",
+    "    if len(p) != len(t):\n",
+    "        if len(p) > len(t):\n",
+    "            maior = 'Pressão'\n",
+    "        else:\n",
+    "            maior = \"Temperatura\"\n",
+    "        raise ValueError(f'Há mais valores para a lista de {maior}')\n",
+    "\n",
+    "\n",
+    "def coluna_divisao(p, t):\n",
+    "    '''Realizar a criação de nova Lista de divisão entre Pressão e Temperatura.'''\n",
+    "    try:\n",
+    "        validacao(p, t)\n",
+    "    except Exception as e:\n",
+    "        print({e})\n",
+    "    else:\n",
+    "        divisao = [a / b for a, b in zip(p, t)]\n",
+    "        return divisao"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "gSvAEmxit1zI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5.0, 4.8, 4.666666666666667, 4.571428571428571, 4.5]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Testando no exemplo que não lança exceção\n"
+    "# Testando no exemplo que não lança exceção\n",
+    "pressoes = [100, 120, 140, 160, 180]\n",
+    "temperaturas = [20, 25, 30, 35, 40]\n",
+    "\n",
+    "coluna_divisao(pressoes, temperaturas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "bvebuMOot4ur"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ZeroDivisionError('Há temperatura com valor 0')}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Testando no exemplo que lança exceção (ZeroDivisionError)\n"
+    "# Testando no exemplo que lança exceção (ZeroDivisionError)\n",
+    "pressoes = [60, 120, 140, 160, 180]\n",
+    "temperaturas = [0, 25, 30, 35, 40]\n",
+    "coluna_divisao(pressoes, temperaturas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "sFsfTVHqt4d5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ValueError('Há mais valores para a lista de Temperatura')}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Testando no exemplo que lança exceção (ValueError)\n"
+    "# Testando no exemplo que lança exceção (ValueError)\n",
+    "pressoes = [100, 120, 140, 160]\n",
+    "temperaturas = [20, 25, 30, 35, 40]\n",
+    "coluna_divisao(pressoes, temperaturas)"
    ]
   }
  ],
