Implement code structure updates and remove redundant code blocks

--- a/alura/python-para-data-science/3-analise-numerica-NumPy/Praticando.ipynb
+++ b/alura/python-para-data-science/3-analise-numerica-NumPy/Praticando.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "38c94ad8",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
        "       [ 16.45, 261.51, 152.  ,  74.  ,   2.  ]], shape=(10000, 5))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "dac0f058",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1b1a8347ed0>"
+       "<matplotlib.collections.PathCollection at 0x1b1a858ac10>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "a18df2d8",
    "metadata": {},
    "outputs": [],
@@ -89,17 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "42ad16e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b1a717b9d0>]"
+       "[<matplotlib.lines.Line2D at 0x1b1a95f5d10>]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -133,7 +133,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
+   "id": "493b1b8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06748551409607546 0.06358962719434089 -1.8376945826096798 -1.0690753104471358\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a_laranja, a_toranja, b_laranja, b_toranja)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a66bc9dd",
    "metadata": {},
    "outputs": [
@@ -157,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "cd49f27a",
    "metadata": {},
    "outputs": [
